# OS-Adriyan-Yulia-Kate

./: .gitignore
mycat/: makefile  mycat.cpp
mycl/: CMakeLists.txt  Server.cpp  Server.h  clientMain.cpp  serverMain.cpp
mycp/: CMakeLists.txt  Files.cpp  Files.h  Helpers.cpp  Helpers.h  main.cpp
mygrep/: CMakeLists.txt  Helpers.cpp  Helpers.h  main.cpp
myls/: .gitignore  CMakeLists.txt  Files.cpp  Files.h  Helpers.cpp  Helpers.h  Path.cpp  Path.h  main.cpp
mymkdir/: CMakeLists.txt  Helpers.cpp  Helpers.h  main.cpp
mymv/: CMakeLists.txt  main.cpp
myrm/: CMakeLists.txt  main.cpp
myshell/: CMakeLists.txt  main.cpp
